force-app/main/default/objects/Booking__c/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SEPA_CREDIT_TRANSFER</fullName>
                <label>Sepa Credit Transfer</label>
            </value>
            <value>
                <fullName>CREDIT_TRANSFER_CANCELLATION</fullName>
                <label>Credit Transfer Cancellation</label>
            </value>
            <value>
                <fullName>SEPA_CREDIT_TRANSFER_RETURN</fullName>
                <label>Sepa Credit Transfer Return</label>
            </value>
            <value>
                <fullName>CANCELLATION_SEPA_CREDIT_TRANSFER_RETURN</fullName>
                <label>Cancellation Sepa Credit Transfer Return</label>
            </value>
            <value>
                <fullName>DIRECT_DEBIT</fullName>
                <label>Direct Debit</label>
            </value>
            <value>
                <fullName>SEPA_DIRECT_DEBIT</fullName>
                <label>Sepa Direct Debit</label>
            </value>
            <value>
                <fullName>CANCELLATION_DIRECT_DEBIT</fullName>
                <label>Cancellation Direct Debit</label>
            </value>
            <value>
                <fullName>CANCELLATION_SEPA_DIRECT_DEBIT</fullName>
                <label>Cancellation Sepa Direct Debit</label>
            </value>
            <value>
                <fullName>SEPA_DIRECT_DEBIT_RETURN</fullName>
                <label>Sepa Direct Debit Return</label>
            </value>
            <value>
                <fullName>CANCELLATION_SEPA_DIRECT_DEBIT_RETURN</fullName>
                <label>Cancellation Sepa Direct Debit Return</label>
            </value>
            <value>
                <fullName>CANCELLATION_DOUBLE_BOOKING</fullName>
                <label>Cancellation Double Booking</label>
            </value>
            <value>
                <fullName>CANCELLATION_BOOKING</fullName>
                <label>Cancellation Booking</label>
            </value>
            <value>
                <fullName>CARD_TRANSACTION</fullName>
                <label>Card Transaction</label>
            </value>
            <value>
                <fullName>CANCELLATION_CARD_TRANSACTION</fullName>
                <label>Cancellation Card Transaction</label>
            </value>
            <value>
                <fullName>CHARGE_CARD</fullName>
                <label>Charge Card</label>
            </value>
            <value>
                <fullName>CANCELLATION_CHARGE_CARD</fullName>
                <label>Cancellation Charge Card</label>
            </value>
            <value>
                <fullName>CHARGE_DUNNING</fullName>
                <label>Charge Dunning</label>
            </value>
            <value>
                <fullName>CANCELLATION_CHARGE_DUNNING</fullName>
                <label>Cancellation Charge Dunning</label>
            </value>
            <value>
                <fullName>CARD_TRANSACTION_DIRECT</fullName>
                <label>Card Transaction Direct</label>
            </value>
            <value>
                <fullName>INTERNATIONAL_CREDIT_TRANSFER</fullName>
                <label>International Credit Transfer</label>
            </value>
            <value>
                <fullName>CANCELLATION_CARD_TRANSACTION_DIRECT</fullName>
                <label>Cancellation Card Transaction Direct</label>
            </value>
            <value>
                <fullName>CANCELLATION_INTERNATIONAL_CREDIT_TRANSFER</fullName>
                <label>Cancellation International Credit Transfer</label>
            </value>
            <value>
                <fullName>FOREIGN_PAYMENT</fullName>
                <label>Foreign Payment</label>
            </value>
            <value>
                <fullName>INTEREST_ACCRUED</fullName>
                <label>Interest Accrued</label>
            </value>
            <value>
                <fullName>CANCELLATION_INTEREST_ACCRUED</fullName>
                <label>Cancellation Interest Accrued</label>
            </value>
            <value>
                <fullName>REBOOKING</fullName>
                <label>Rebooking</label>
            </value>
            <value>
                <fullName>CANCELLATION_REBOOKING</fullName>
                <label>Cancellation Rebooking</label>
            </value>
            <value>
                <fullName>REBOOKING_INTEREST</fullName>
                <label>Rebooking Interest</label>
            </value>
            <value>
                <fullName>CANCELLATION_REBOOKING_INTEREST</fullName>
                <label>Cancellation Rebooking Interest</label>
            </value>
            <value>
                <fullName>CHARGE_SEPA_DIRECT_DEBIT_RETURN</fullName>
                <label>Charge Sepa Direct Debit Return</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>