force-app/main/default/objects/Booking__c/fields/Card__c.field-meta.xml
<CustomField>
    <fullName>Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Card</label>
    <referenceTo>Card__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>