force-app/main/default/objects/Booking__c/fields/Creditor_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Identifier__c</fullName>
    <label>Creditor Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>