force-app/main/default/objects/Booking__c/fields/End_To_End_Id__c.field-meta.xml
<CustomField>
    <fullName>End_To_End_Id__c</fullName>
    <label>End To End Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>