force-app/main/default/objects/Booking__c/fields/Mandate_Reference__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Reference__c</fullName>
    <label>Mandate Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>