force-app/main/default/objects/Booking__c/fields/Meta_Info__c.field-meta.xml
<CustomField>
    <fullName>Meta_Info__c</fullName>
    <label>Meta Info</label>
    <type>TextArea</type>
</CustomField>