force-app/main/default/objects/Booking__c/fields/Recipient_BIC__c.field-meta.xml
<CustomField>
    <fullName>Recipient_BIC__c</fullName>
    <label>Recipient BIC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>