force-app/main/default/objects/Booking__c/fields/Recipient_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Recipient_IBAN__c</fullName>
    <label>Recipient IBAN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>