force-app/main/default/objects/Booking__c/fields/Reconciliation_Id__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Id__c</fullName>
    <label>Reconciliation Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>