force-app/main/default/objects/Booking__c/fields/Return_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Return_Transaction_Id__c</fullName>
    <label>Return Transaction Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>