force-app/main/default/objects/Booking__c/fields/Sender_BIC__c.field-meta.xml
<CustomField>
    <fullName>Sender_BIC__c</fullName>
    <label>Sender BIC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>