force-app/main/default/objects/Booking__c/fields/Sender_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Sender_IBAN__c</fullName>
    <label>Sender IBAN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>