force-app/main/default/objects/Booking__c/fields/Sepa_Return_Code__c.field-meta.xml
<CustomField>
    <fullName>Sepa_Return_Code__c</fullName>
    <label>Sepa Return Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>