force-app/main/default/objects/Booking__c/fields/Sepa_Return_Reason_Definition__c.field-meta.xml
<CustomField>
    <fullName>Sepa_Return_Reason_Definition__c</fullName>
    <label>Sepa Return Reason Definition</label>
    <type>TextArea</type>
</CustomField>