force-app/main/default/objects/Booking__c/fields/Valuta_Date__c.field-meta.xml
<CustomField>
    <fullName>Valuta_Date__c</fullName>
    <label>Valuta Date</label>
    <type>Date</type>
</CustomField>